@@ -13,8 +13,8 @@ server:
 	# whitespace is not necessary, but looks cleaner.
 
 	# verbosity number, 0 is least verbose. 1 is default.
-	verbosity: 2
-	
+	verbosity: 1
+
 	# number of threads to create. 1 disables threading.
 	# num-threads: 1
 
