@@ -14,7 +14,7 @@ unbound-checkconf
 .Sh SYNOPSIS
 .Nm unbound-checkconf
 .Op Fl h
-cfgfile
+.Op cfgfile
 .Sh DESCRIPTION
 .Ic Unbound-checkconf
 checks the configuration file for the
@@ -30,9 +30,15 @@ The available options are:
 Show the version and commandline option help.
 .It cfgfile
 The config file to read with settings for unbound. It is checked.
+If omitted, the config file at the default location is checked.
 .Sh EXIT CODE
 The unbound-checkconf program exits with status code 1 on error, 
 0 for a correct config file.
+.El
+.Sh FILES
+.Bl -tag -width indent
+.It Pa /etc/unbound/unbound.conf
+unbound configuration file.
 .El
 .Sh SEE ALSO
 .Xr unbound.conf 5 , 
