@@ -27,7 +27,8 @@ The available options are:
 .It Fl h
 Show the version and commandline option help.
 .It Fl c Ar cfgfile
-Set the config file to read with settings for unbound. The syntax is
+Set the config file with settings for unbound to read instead of the 
+file at default location /etc/unbound/unbound.conf. The syntax is
 described in 
 .Xr unbound.conf 5 .
 .It Fl d
